--- a/_posts/2026-1-30-AV-Ev.md
+++ b/_posts/2026-1-30-AV-Ev.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Msfvenom Is Not Dead"
 date: 2026-01-30
-categories: [my-research]
+categories: [pentesting]
 image: https://miro.medium.com/v2/resize:fit:2000/format:webp/1*wMY1oHvtqyLp2czACLuH4w.png
 permalink: /blog/AV-Evations
 locked: false
