new blog update

--- a/_posts/2026-02-06-BankLab.md
+++ b/_posts/2026-02-06-BankLab.md
@@ -633,7 +633,7 @@ gpupdate /force
 
 #### (Final Verification)
 
-You configured the Root CA to tell computers: "Go to http://pki.bank.lab/... to check if I am valid." Let's make sure that link actually works.
+Go to http://pki.bank.lab/ to check if I am valid. Let's make sure that link actually works.
 
 On DC01, open the Microsoft Edge browser.
 
