new blog update1

--- a/_posts/2026-02-06-BankLab.md
+++ b/_posts/2026-02-06-BankLab.md
@@ -392,7 +392,7 @@ The Root CA is now `Offline.` It will remain powered down and disconnected from 
 
 We are going to verify if your server trusts the certificate yet.
 
-**1\. The "Before" Check (The Error Screenshot)**
+**1\. The "Before" Check **
 
 -   Go to your folder `C:\PKI`.
 
