new blog postspart2UPDATE

--- a/_posts/2026-02-06-BankLab2.md
+++ b/_posts/2026-02-06-BankLab2.md
@@ -4,7 +4,7 @@ title: "Simulating a Banking Security Infrastructure Part 2 The Subordinate (Iss
 date: 2026-02-06
 categories: walkthrough
 image: https://miro.medium.com/v2/resize:fit:2000/format:webp/1*JXgOF-w_gIDA7L2EAXP7iw.png
-permalink: /blog/BankLab
+permalink: /blog/BankLab2
 locked: false
 ---
 
